@@ -14,6 +14,8 @@ unreleased
 - add support for py36 and py37 and add py36-dev and py37(nightly) to
   travis builds. Thanks John Vandenberg.
 
+- fix #348: add py2 and py3 as default environments pointing to
+  "python2" and "python3" basepython executables. Thanks Tobias McNulty.
 
 
 2.4.1
